Fxed the menu bar

--- a/imagincenter/apps/home/static/home/css/custom.css
+++ b/imagincenter/apps/home/static/home/css/custom.css
@@ -5,6 +5,26 @@
 	
 }
 
+.header{
+  width: 100%;
+  position: fixed;
+  top:0px;
+  z-index: 200;
+}
+
+.header-bottom{
+  width: 100%;
+  top:0px;
+  position: fixed;
+  margin-top: 90px;
+  background-color: white;
+  z-index: 200;
+
+}
+.mainContent{
+  margin-top: 130px;
+}
+
 .downloadable-pdf{
     height: 200px;
     width: 150px;
