--- a/apps/home/templates/patient.html
+++ b/apps/home/templates/patient.html
@@ -9,11 +9,11 @@
 		
 		<div class="container">
 			<h3>&iquest;Qu&eacute; necesita el paciente al venir?</h3>
-			<div class="about-text">
+			<div class="about-text" >
 				<div class="col-md-6 about-text-left">
 					<img src="{% static 'home/images/x-ray.jpg' %}" class="img-responsive" alt=""/>
 				</div>
-				<div class="col-md-6 about-text-right">
+				<div class="col-md-6 about-text-right" >
 					
 					<ul>
 						<li><a href="#">Traer tarjeta de seguro.</a></li>
@@ -24,9 +24,8 @@
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-		
 		<div class="about-team">
-			<h3>Nuestros Seguros</h3>
+			<h3> <a id ="insurence">Nuestros Seguros</a></h3>
 			<div class="container">
 				<div class="row team-row">
 					<div class="col-sm-6 col-md-3 team-grids">
