--- a/apps/home/templates/services.html
+++ b/apps/home/templates/services.html
@@ -23,7 +23,7 @@
 				<div class="col-sm-6 col-md-4 services-grids">
 					<div class="thumbnail">
 						<div class="moments-bottom">
-							<a href="images/img10.jpg">
+							<a href="{% url 'service'%}">
 								<img src="{% static 'home/images/picture-placeholder.png' %}" class="img-responsive zoom-img " alt="">				
 							</a>
 						</div>
@@ -36,7 +36,7 @@
 				<div class="col-sm-6 col-md-4 services-grids">
 					<div class="thumbnail">
 						<div class="moments-bottom">
-							<a href="images/img11.jpg">
+							<a href="{% url 'service'%}">
 								<img src="{% static 'home/images/picture-placeholder.png' %}" class="img-responsive zoom-img " alt="">				
 							</a>
 						</div>
@@ -49,7 +49,7 @@
 				<div class="col-sm-6 col-md-4 services-grids">
 					<div class="thumbnail">
 						<div class="moments-bottom">
-							<a href="images/img12.jpg">
+							<a href="{% url 'service'%}">
 								<img src="{% static 'home/images/picture-placeholder.png' %}" class="img-responsive zoom-img " alt="">				
 							</a>
 						</div>
@@ -62,7 +62,7 @@
 				<div class="col-sm-6 col-md-4 services-grids">
 					<div class="thumbnail">
 						<div class="moments-bottom">
-							<a href="images/img13.jpg">
+							<a href="{% url 'service'%}">
 								<img src="{% static 'home/images/picture-placeholder.png' %}" class="img-responsive zoom-img " alt="">				
 							</a>
 						</div>
@@ -75,7 +75,7 @@
 				<div class="col-sm-6 col-md-4 services-grids">
 					<div class="thumbnail">
 						<div class="moments-bottom">
-							<a href="images/img14.jpg">
+							<a href="{% url 'service'%}">
 								<img src="{% static 'home/images/picture-placeholder.png' %}" class="img-responsive zoom-img " alt="">				
 							</a>
 						</div>
@@ -88,7 +88,7 @@
 				<div class="col-sm-6 col-md-4 services-grids">
 					<div class="thumbnail">
 						<div class="moments-bottom">
-							<a href="images/img15.jpg">
+							<a href="{% url 'service'%}">
 								<img src="{% static 'home/images/picture-placeholder.png' %}" class="img-responsive zoom-img " alt="">				
 							</a>
 						</div>
@@ -101,7 +101,7 @@
 				<div class="col-sm-6 col-md-4 services-grids">
 					<div class="thumbnail">
 						<div class="moments-bottom">
-							<a href="images/img16.jpg">
+							<a href="{% url 'service'%}">
 								<img src="{% static 'home/images/picture-placeholder.png' %}" class="img-responsive zoom-img " alt="">				
 							</a>
 						</div>
@@ -114,7 +114,7 @@
 				<div class="col-sm-6 col-md-4 services-grids">
 					<div class="thumbnail">
 						<div class="moments-bottom">
-							<a href="images/img17.jpg">
+							<a href="{% url 'service'%}">
 								<img src="{% static 'home/images/picture-placeholder.png' %}" class="img-responsive zoom-img " alt="">				
 							</a>
 						</div>
