--- a/apps/home/templates/patient.html
+++ b/apps/home/templates/patient.html
@@ -25,7 +25,40 @@
 			</div>
 		</div>
 		<div class="about-team">
-			<h3> <a id ="insurence">Nuestros Seguros</a></h3>
+			<h3> <a >Formularios</a></h3>
+			<div class="container">
+				<div class="row team-row">
+					<div class="col-sm-6 col-md-4 team-grids">
+						<div >
+							<img align="center" class="downloadable-pdf" src="{% static 'home/images/PDF Placeholder.png' %}" alt="...">
+							<div class="caption">
+								<h4><a style="display:block;margin-left:auto;margin-right:auto;" align="center" href="#">Formulario MRI</a></h4>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-4 team-grids">
+						<div >
+							<img align="center" class="downloadable-pdf" src="{% static 'home/images/PDF Placeholder.png' %}" alt="...">
+							<div class="caption">
+								<h4><a style="display:block;margin-left:auto;margin-right:auto;" align="center" href="#">Formularios X-Ray</a></h4>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-4 team-grids">
+						<div id = "insurence">
+							<img align="center" class="downloadable-pdf" src="{% static 'home/images/PDF Placeholder.png' %}" alt="...">
+							<div class="caption">
+								<h4><a style="display:block;margin-left:auto;margin-right:auto;" align="center" href="#">Formularios CT</a></h4>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"> </div>
+				</div>
+			</div>
+			
+		</div>
+		<div class="about-team">
+			<h3>Nuestros Seguros</h3>
 			<div class="container">
 				<div class="row team-row">
 					<div class="col-sm-6 col-md-3 team-grids">
@@ -53,38 +86,6 @@
 						<div class="thumbnail team-thmnl">
 							<img src="{% static 'home/images/monumental.jpeg' %}" alt="...">
 							<div class="caption">
-							</div>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-		</div>
-		<div class="about-team">
-			<h3>Formularios</h3>
-			<div class="container">
-				<div class="row team-row">
-					<div class="col-sm-6 col-md-4 team-grids">
-						<div >
-							<img align="center" class="downloadable-pdf" src="{% static 'home/images/PDF Placeholder.png' %}" alt="...">
-							<div class="caption">
-								<h4><a style="display:block;margin-left:auto;margin-right:auto;" align="center" href="#">Formulario MRI</a></h4>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-4 team-grids">
-						<div >
-							<img align="center" class="downloadable-pdf" src="{% static 'home/images/PDF Placeholder.png' %}" alt="...">
-							<div class="caption">
-								<h4><a style="display:block;margin-left:auto;margin-right:auto;" align="center" href="#">Formularios X-Ray</a></h4>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-4 team-grids">
-						<div>
-							<img align="center" class="downloadable-pdf" src="{% static 'home/images/PDF Placeholder.png' %}" alt="...">
-							<div class="caption">
-								<h4><a style="display:block;margin-left:auto;margin-right:auto;" align="center" href="#">Formularios CT</a></h4>
 							</div>
 						</div>
 					</div>
