The logo cant be larger than 100px of height

--- a/apps/home/templates/base.html
+++ b/apps/home/templates/base.html
@@ -29,7 +29,7 @@
 			<div class="container" style="padding-bottom:10px;">
 				<div class="header-logo">
 					<a href="/">
-						<img src="{% static 'home/images/LOGO 30.jpg' %}" alt="logo"/>
+						<img style="max-height: 100px;" src="{% static 'home/images/LOGO 30.jpg' %}" alt="logo"/>
 					</a>	
 				</div>
 				<div class="header-info">
@@ -48,7 +48,7 @@
 				<div class="container" >
 					<!--top-nav-->
 					<div class="top-nav cl-effect-5">
-						<span class="menu-icon"><img src="{% static 'home/images/menu-icon.png' %}" alt=""/></span>		
+						<span class="menu-icon"><img  src="{% static 'home/images/menu-icon.png' %}" alt=""/></span>		
 						<ul class="nav1">
 							<li><a href="{% url 'home' %}"><span data-hover="Inicio">Inicio</span></a></li>
 							<li><a href="{% url 'about' %}"> <span data-hover="Nosotros">Nosotros</span></a></li>
