--- a/apps/home/templates/index.html
+++ b/apps/home/templates/index.html
@@ -7,25 +7,25 @@
 	<!--banner-->
 	<div class="banner">
 		<div class="container ">
-			
+
 			<!-- Home image  -->
-			
+
 			<!--//Home image -->
-			
+
 		</div>
 	</div>
 	<!--//banner-->
 	<!--banner-bottom-->
-	<div class="banner-bottom">
-		<div class="container">
+	<!-- <div class="banner-bottom"> -->
+		<!-- <div class="container">
 			<h1>Nuestros servicios principales</h1>
 			<a href="#gallery" class="arrow scroll"> </a>
 		</div>
-	</div>
+	</div> -->
 	<!--//banner-bottom-->
 	<!--gallery-->
-	<div class="gallery" id="gallery">
-		<div class="col-md-6 " style="padding-right: 0px; padding-left: 0px;">
+	<!-- <div class="gallery" id="gallery"> -->
+		<!-- <div class="col-md-6 " style="padding-right: 0px; padding-left: 0px;">
 			<div class="gallery-grid-CT">
 				<div class="main-service">
 					<h4>CT Scan</h4>
@@ -47,8 +47,8 @@
 					<h4>Ultrasound</h4>
 					<p>Lorem Ipsum was popularised in the with the release of Letraset sheets contai ningthe with the release of </p>
 				</div>
-			</div>	
-			<div class="gallery-grid-XR">		
+			</div>
+			<div class="gallery-grid-XR">
 				<div class="main-service">
 					<h4>Digital X-Ray</h4>
 					<p>Lorem Ipsum was popularised in the with the release of Letraset sheets contai ningthe with the release of </p>
@@ -57,11 +57,11 @@
 
 		</div>
 		<div class="clearfix"> </div>
-	</div>
+	</div> -->
 	<!--//gallery-->
 	<!--work-->
-	<div class="work">		
-		<div class="container">	
+	<div class="work">
+		<div class="container">
 			<div class="work-title">
 				<h3>Imaging Center</h3>
 			</div>
@@ -73,7 +73,7 @@
 						<p>Mira la lista de seguros que aceptamos</p>
 					</li>
 				</ul>
-			</div>	
+			</div>
 			<div class="col-md-4 work-grids">
 				<ul>
 					<li><img src="{% static 'home/images/icon3.png' %}" alt=""></li>
@@ -95,11 +95,11 @@
 			<div class="clearfix"> </div>
 		</div>
 	</div>
-	
+
 	<!--map-->
 	<div class="map">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d576.9532980333565!2d-70.70252200078544!3d19.452604726018986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sdo!4v1461703027826"></iframe>
-		<div class="container">	
+		<div class="container">
 			<div class="map-info">
 				<ul>
 					<li>Imaging Center</li>
@@ -112,7 +112,7 @@
 	</div>
 	<!--//map-->
 	<!--//work-->
-	
+
 	{% endblock %}
 	<!--smooth-scrolling-of-move-up-->
 	<script type="text/javascript">
@@ -122,12 +122,12 @@
 				containerID: 'toTop', // fading element id
 				containerHoverID: 'toTopHover', // fading element hover id
 				scrollSpeed: 1200,
-				easingType: 'linear' 
+				easingType: 'linear'
 			};
 			*/
-			
+
 			jQuery().UItoTop({ easingType: 'easeOutQuart' });
-			
+
 		});
 	</script>
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
